--- a/styles/starter.css
+++ b/styles/starter.css
@@ -215,16 +215,16 @@ font-style: normal;
   }
 }
      
-  @media (min-width: 768px) {
-      .card {
-       flex: 1 0 calc(50% - 20px); /
-    }
+@media (min-width: 768px) {
+    .card {
+     flex: 1 0 calc(50% - 20px); 
+  }
 }
      
-   @media (min-width: 1200px) {
-      .card {
-        flex: 1 0 calc(33% - 20px);
-    }
+@media (min-width: 1200px) {
+    .card {
+     flex: 1 0 calc(33% - 20px);
+  }
 }
 
 /*video*/
@@ -337,7 +337,6 @@ font-style: normal;
   background-color: #8e8b81;
   color: #444242;
   padding: 30px 0;
-  font-size: 22.5px;
   line-height: 20px;
   width: 100%;
   bottom: 0;
@@ -345,6 +344,9 @@ font-style: normal;
   padding: 100px 0 30px;
 }
 
+.footer-container {
+  font-size: 27.5px;
+}
 .footer-row {
   display: flex;
   flex-wrap: wrap;
@@ -359,7 +361,7 @@ font-style: normal;
 
 
 .footer-col h4 {
-  font-size: 27px;
+  font-size: 31px;
   color: #fff;
   text-transform: uppercase;
   margin-bottom: 10px;
@@ -381,7 +383,7 @@ font-style: normal;
 
 
 .footer-col ul li a {
-  font-size: 20px;
+  font-size: 28px;
   text-transform: capitalize;
   color: #2e2c2c;
   text-decoration: none;
